apps/staging/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
  namespace: hello-web-app-routing
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: aks-helloworld
