apps/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-helloworld
  namespace: podinfo
spec:
  ingressClassName: nginx-internal
  rules:
    - host: helloworld.aks.medline.com
      http:
        paths:
          - backend:
              service:
                name: aks-helloworld
                port:
                  number: 80
            path: /
            pathType: Prefix
